# IteratorTools

./: CMakeLists.txt  Iterators.hpp  README.md
Test/: CMakeLists.txt  Iterators.cpp  TransformIterators.cpp  ZipIterators.cpp  build_and_run_tests_ci.sh  build_tests_ci.sh  run_tests_ci.sh
Test/C++17/: CMakeLists.txt  CounterIterator.cpp  Iterators.cpp  utils.hpp
Test/C++20/: CMakeLists.txt  Iterators.cpp
html/: Iterators_8hpp.html  Iterators_8hpp.js  Iterators_8hpp__incl.dot  Iterators_8hpp__incl.map  Iterators_8hpp__incl.md5  Iterators_8hpp_source.html  README_8md.html  README_8md_source.html  annotated.html  annotated_dup.js  classes.html  classiterators_1_1impl_1_1ZipIterator-members.html  classiterators_1_1impl_1_1ZipIterator.html  classiterators_1_1impl_1_1ZipIterator.js  classiterators_1_1impl_1_1ZipIterator__coll__graph.dot  classiterators_1_1impl_1_1ZipIterator__coll__graph.map  classiterators_1_1impl_1_1ZipIterator__coll__graph.md5  classiterators_1_1impl_1_1ZipIterator__inherit__graph.map  classiterators_1_1impl_1_1ZipIterator__inherit__graph.md5  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.dot  inherit_graph_10.map  (+183 more)
latex/: Iterators_8hpp.tex  Iterators_8hpp.tex.tmp  Iterators_8hpp__incl.dot  Iterators_8hpp__incl.md5  Iterators_8hpp_source.tex  annotated.tex  classiterators_1_1impl_1_1ZipIterator.tex  classiterators_1_1impl_1_1ZipIterator__coll__graph.md5  classiterators_1_1impl_1_1ZipIterator__inherit__graph.dot  files.tex  hierarchy.tex  index.tex  refman.aux  (+66 more)
(+60 files in other folders)
