project(Tests)

if (${BUILD_TESTS})
    enable_testing()
    find_package(GTest)
    if (GTest_FOUND)
        set(CMAKE_CXX_FLAGS "-Wall -Wpedantic -Wextra")
        if (CMAKE_BUILD_TYPE STREQUAL "Debug")
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
        else ()
            message("Disabling address sanitizer when building for release")
        endif()
        add_subdirectory(C++17)
        add_subdirectory(C++20)
    else()
        message(WARNING "Failed to locate GTest. You won't be able to run the tests.")
    endif()
endif()

